<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/backrepeat"
>		
<LinearLayout android:id="@+id/layout_title" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent" android:layout_height="wrap_content"> 
<com.viewpagerindicator.NormalTitle
		android:id="@+id/ntTitle"
		android:padding="5dip"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:background="@color/tab_background_color"
		android:textColor="@color/tab_text_color"
		android:textSize="@dimen/stream_tab_text_size"
		app:footerColor="#FFAA2222"
		app:footerLineHeight="1dp"
		app:footerIndicatorHeight="3dp"
		app:footerIndicatorStyle="underline"
		app:selectedColor="@color/tab_text_color"
		app:selectedBold="false"
		/>
</LinearLayout>
<RelativeLayout
android:id="@+id/loginView"
android:layout_centerVertical="true"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingLeft="10dip"
android:paddingRight="10dip"
android:orientation="vertical" >
<TextView android:id="@+id/txtDesc"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:paddingBottom="4dip"
android:text="@string/igslogininf"
android:textColor="#000000"/>
<RelativeLayout
	android:id="@+id/h_sep_desc"
	android:paddingLeft="2dip"
	android:paddingRight="2dip"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/h_sepline_normal"
	android:layout_below="@+id/txtDesc" />  
<TextView android:id="@+id/txtAccount"
android:layout_width="wrap_content"
android:paddingTop="1dip"
android:layout_below="@+id/h_sep_desc"
android:layout_height="wrap_content" android:text="@string/acount" android:textColor="#000000"/>
<EditText
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_below="@+id/txtAccount"
android:prompt="@string/yourigsaccount"
android:id="@+id/txtEmail" android:text="">
</EditText>
<TextView
android:id="@+id/txtPasswd"
android:layout_width="wrap_content"
android:layout_below="@+id/txtEmail"
android:layout_height="wrap_content" android:text="@string/password" android:textColor="#000000">
</TextView>
<EditText
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_below="@+id/txtPasswd"
android:prompt="@string/yourigspassword"
android:id="@+id/txtPassword" android:text="" android:password="true">
</EditText>
<Button android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentLeft="true"
android:layout_below="@+id/txtPassword"
android:id="@+id/BtnLogin" android:text="@string/login" android:bufferType="spannable"/>
<Button
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentRight="true"
android:layout_below="@+id/txtPassword"
android:text="@string/register" android:id="@+id/BtnRegister">
</Button>
</RelativeLayout>
</RelativeLayout>
