<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
android:id="@+id/backLayoutMain"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/backrepeat"
xmlns:android="http://schemas.android.com/apk/res/android"
>

<TextView
android:id="@+id/txtAccount"
android:layout_width="wrap_content"
android:textSize="24sp"
android:layout_height="wrap_content" android:text="@string/acount" android:textColor="#000000">
</TextView>
<EditText
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:textSize="18sp"
android:layout_below="@+id/txtAccount"
android:id="@+id/txtEmail" android:text="sureone@gmail.com">
</EditText>
<TextView
android:id="@+id/txtPasswd"
android:layout_width="wrap_content"
android:textSize="24sp"

android:layout_below="@+id/txtEmail"
android:layout_height="wrap_content" android:text="@string/password" android:textColor="#000000">
</TextView>
<EditText
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:textSize="18sp"
android:layout_below="@+id/txtPasswd"
android:id="@+id/txtPassword" android:text="111111" android:password="true">
</EditText>

<Button
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textSize="24sp"
android:layout_alignParentLeft="true"
android:layout_below="@+id/SpinnerGameSize"
android:id="@+id/BtnLogin" android:text="@string/login" android:bufferType="spannable">
</Button>
<TextView
android:id="@+id/txtBoardSize"
android:layout_width="wrap_content"
android:textSize="24sp"
android:layout_below="@+id/txtPassword"
android:layout_alignParentLeft="true"
android:layout_height="wrap_content" 
android:text="@string/txtBoardSize" android:textColor="#000000">
</TextView>
<Spinner android:id="@+id/SpinnerGameSize" 
android:layout_below="@+id/txtPassword" 
android:layout_height="wrap_content" 
android:textSize="24sp"
android:layout_toRightOf="@+id/txtBoardSize"
android:layout_width="wrap_content"></Spinner>
<Button
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textSize="24sp"
android:layout_alignParentRight="true"
android:layout_below="@+id/SpinnerGameSize"
android:text="@string/register" android:id="@+id/BtnRegister">
</Button>

</RelativeLayout>
