<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backrepeat"
        >
    <LinearLayout android:id="@+id/layout_title" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.viewpagerindicator.NormalTitle
                android:id="@+id/ntTitle"
                android:padding="5dip"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:background="@color/tab_background_color"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/stream_tab_text_size"
                app:footerColor="#FFAA2222"
                app:footerLineHeight="1dp"
                app:footerIndicatorHeight="3dp"
                app:footerIndicatorStyle="underline"
                app:selectedColor="@color/tab_text_color"
                app:selectedBold="false"
                />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/loginView"
            android:layout_centerVertical="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:orientation="vertical" >






        <EditText
                android:layout_marginTop="4.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/groupname"
                android:id="@+id/groupname" android:text="">
        </EditText>







        <EditText
                android:layout_marginTop="4.0dip"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="6"
                android:gravity="top|left"
                android:maxLines="10"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:scrollbars="vertical"
                android:id="@+id/groupdesc"
                android:hint="@string/groupdesc"

                />



        <Spinner
                android:id="@+id/rankReq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ranks"
                android:prompt="@string/rankReq" />


        <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register" android:id="@+id/BtnRegister"
                    android:onClick="onRegister">
            </Button>


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" android:id="@+id/btnSave"
                android:onClick="onSave">
        </Button>





        <TextView android:id="@+id/txtDesc"
                  android:layout_width="wrap_content"
                  android:layout_marginTop="4dip"
                  android:paddingLeft="1dip"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/BtnRegister"
                  android:text="@string/registerDesc"
                  android:textColor="#000000"/>
    </LinearLayout>

</RelativeLayout>
