<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainlayout"
	android:layout_height="fill_parent"
	android:background="@drawable/chat_bg"
	android:layout_alignParentTop="true">
	
	<RelativeLayout
	android:id="@+id/uptopArea"
	android:layout_alignParentTop="true"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
		<LinearLayout
		android:id="@+id/titleAreaGo"
		xmlns:app="http://schemas.android.com/apk/res-auto"	
		android:layout_alignParentTop="true"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
			<com.viewpagerindicator.GoGameTitle
			android:id="@+id/gtTitle"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:background="@color/tab_background_color"
			android:textColor="@color/tab_text_color"
			android:textSize="@dimen/stream_tab_text_size"
			app:footerColor="@color/tab_background_color"
			app:footerLineHeight="1dp"
			app:footerIndicatorHeight="5dp"
			app:footerIndicatorStyle="underline"
			app:selectedColor="@color/tab_text_color"
			app:selectedBold="false"
			/>	
		</LinearLayout>

		<RelativeLayout android:id="@+id/panelGo"
		android:background="#ffe5a659"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/titleAreaGo" >
			<com.sureone.GoPanelView
			android:id="@+id/boardView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		</RelativeLayout>


		<RelativeLayout android:id="@+id/h_sep" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/sep_line" android:layout_below="@+id/panelGo" />  
		<TextView
		android:id="@+id/txtInfoGo"
		android:text="TextView"
		android:scrollbars="vertical"
		android:maxLines="200"
		style="@style/goviewtalktext"
		android:paddingLeft="4dip"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/h_sep" />				
	</RelativeLayout>

	<LinearLayout
	android:id="@+id/controllerArea"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_alignParentBottom="true" >
		<LinearLayout 
			xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
			  xmlns:myapp="http://schemas.android.com/apk/res/com.sureone"
			  android:gravity="center_horizontal"
			android:id="@+id/adArea" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<!--com.google.ads.AdView android:id="@+id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" ads:adUnitId="a14e9ccf61c04e3" ads:adSize="BANNER" ads:loadAdOnCreate="false"/-->					
		</LinearLayout>		
		<LinearLayout
		android:id="@+id/talkArea"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bar_bottom_top_bg">
			<Button android:gravity="center" android:id="@+id/btnStart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start" style="@style/chat_send_style" />
			<EditText
			android:paddingLeft="2dip"
			android:paddingRight="2dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/chat_input"
			android:layout_weight="1"
			android:layout_toRightOf="@id/btnStart"
			android:id="@+id/txtTalk"/>
			<Button android:gravity="center" android:id="@+id/btnSendTalk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post" style="@style/chat_send_style" />
		</LinearLayout>
		<TableLayout android:id="@+id/onGameButtons" android:stretchColumns="*"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/input_repeat_bg">
			 <TableRow  android:layout_width="fill_parent">
				  <!--FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:gravity="center" android:id="@+id/btnUndoStep" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/undostep" style="@style/chat_send_style" />
							   </FrameLayout-->
							  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:gravity="center" android:id="@+id/btnPass" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pass" style="@style/chat_send_style" />
							   </FrameLayout>
							  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:gravity="center" android:id="@+id/btnGiveUp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/giveup" style="@style/chat_send_style" />
							   </FrameLayout>
							   <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:gravity="center" android:id="@+id/btnMute" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mute" style="@style/chat_send_style" />
							   </FrameLayout>
							  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:gravity="center" android:id="@+id/btnAlarm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btnalarm" style="@style/chat_send_style" />
							   </FrameLayout>
			</TableRow>
	    </TableLayout>
		<TableLayout android:id="@+id/adminButtons" android:stretchColumns="*" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/input_repeat_bg">
			  <TableRow  android:layout_width="fill_parent">
							  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:gravity="center" android:id="@+id/btnBlackWin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/blackwin" style="@style/chat_send_style" />
							   </FrameLayout>
							  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:gravity="center" android:id="@+id/btnWhiteWin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whitewin" style="@style/chat_send_style" />
							   </FrameLayout>
				   </TableRow>
		</TableLayout>
		<TableLayout android:id="@+id/fullboardbuttons" android:stretchColumns="*" android:layout_alignParentBottom="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/input_repeat_bg" >
			  <TableRow  android:layout_width="fill_parent">
				  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
				   </FrameLayout>
				  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:gravity="center" android:id="@+id/btnFullBoard" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btnFullBoard" style="@style/chat_send_style" />
				   </FrameLayout>
				  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content">
				   </FrameLayout>
				   </TableRow>
		</TableLayout>
		<TableLayout android:id="@+id/dianmuButtons" android:stretchColumns="*" android:layout_alignParentBottom="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/input_repeat_bg">
			  <TableRow  android:layout_width="fill_parent">
				  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content"> <Button android:gravity="center" android:id="@+id/btnScore" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/score" style="@style/chat_send_style" /> </FrameLayout>
				  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content"> <Button android:gravity="center" android:id="@+id/btnDone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/done" style="@style/chat_send_style" /> </FrameLayout>
				  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content"> <Button android:gravity="center" android:id="@+id/btnGiveUp2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/giveup" style="@style/chat_send_style" /> </FrameLayout>
			</TableRow>
			  <TableRow  android:layout_width="fill_parent">
				  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content"> <Button android:gravity="center" android:id="@+id/btnUndoDead" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/undoDead" style="@style/chat_send_style" /> </FrameLayout>
				  <FrameLayout android:layout_weight="1" android:layout_height="wrap_content"> <Button android:gravity="center" android:id="@+id/btnContinueGo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btncontinuego" style="@style/chat_send_style" /> </FrameLayout>
				   </TableRow>
	    </TableLayout>
	</LinearLayout>
</RelativeLayout>
